# gitwarden

./: .gitignore  .readthedocs.yaml  README.md  TODO.md  gitconductor.toml  gitwarden.yaml  pyproject.toml
.github/workflows/: publish.yml  python-package.yml  readthedocs.yml  release.yml  tag-release.yml  tag.yml  test.yml
docs/source/: conf.py  gitconductor.rst  gitwarden.rst  index.rst  modules.rst
gitconductor/: __init__.py  cli.py  gitlab.py  misc.py  settings.py  visualise.py
gitwarden/: __init__.py  cli.py  gitlab.py  main.py  misc.py  output.py  visualise.py
tests/: conftest.py  test_cli.py  test_misc.py
