[project]
name = "gitwarden"
version = "0.1.0"
description = "Manage multiple git repositories seemlessly(ish)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click",
    "gitpython",
    "pydantic",
    "python-gitlab",
    "rich",
    "rich-click",
]

[project.scripts]
gitwarden = "gitwarden.main:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]