[project]
name = "gitwarden"
version = "0.1.0"
description = "Manage multiple git repositories seemlessly(ish)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click",
    "gitpython",
    "pydantic",
    "pytest",
    "pytest-cov",
    "python-gitlab",
    "rich",
    "rich-click",
]

[project.scripts]
gitwarden = "gitwarden.cli:cli"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "C", "B", "I", "Q"]
ignore = []
extend-ignore = []

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
